# mist-cf

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  setup.cfg
analysis/: evaluate_pred.py
configs/: _public_fast_filter.yaml  _public_mist_cf.yaml  debug_mist_cf_canopus.yaml  debug_xformer_canopus_nist.yaml  fast_filter.yaml  ffn_canopus.yaml  ffn_canopus_nist.yaml  mist_cf_canopus.yaml  mist_cf_canopus_nist.yaml  mist_cf_canopus_nist_max_subpeak.yaml  ms1_canopus.yaml  ms1_canopus_nist.yaml  xformer_canopus.yaml  xformer_canopus_nist.yaml
data/: demo_specs.mgf
launcher_scripts/: run_from_config.py
notebooks/: bile_acid_analysis.ipynb  demo_mist_cf.ipynb  mist_cf_fig_benchmark.ipynb  mist_cf_fig_casmi22.ipynb  mist_cf_fig_data.ipynb  mist_cf_fig_fast_filter.ipynb  mist_cf_fig_max_subpeak.ipynb  mist_cf_fig_sirius_compare.ipynb  mist_cf_si_timing.ipynb
notebooks/archive/: mist_cf_fig_sirius_compare.ipynb  process_results.ipynb
preprocessing/: 01_create_split_file.py  02_create_decoy_label.py  03_create_pred_label.py  04_create_subformulae_assignment.py  05_sirius_to_mgf.py  r1_assign_more.py  run_all.sh  xx_add_instrument_type.py  xx_remove_nist_data.py  xx_subset_by_adduct.py
preprocessing/bile_acid/: bile_acid_preprocess.ipynb
preprocessing/biomols_scripts/: 01_filter_smiles.py  02_extract_formulae.py  03_create_formulae_decoys.py  04_create_formulae_split.py  run_all.sh
preprocessing/casmi/: casmi_preprocess.ipynb
quickstart/: download_model.sh  run_model.sh
run_scripts/: timing_experiments.py
src/mist_cf/common/: __init__.py  (+6 more)
(+61 files in other folders)
