[metadata]
name = mist_cf
version = <version number: 0.0.1
#license = <license name, e.g. MIT>
description = FORmula Estimation with Spectrum Transformers
long_description = file: README.md
author = Samuel Goldman
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   pandas
   joblib

[options.extras_require]
dev =
    jupyterlab

[options.packages.find]
where=src

